--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta content="this is landing page docplanner">
     <meta name="keyword" content="landing docplanner html ">
+    <! LINK CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" href="index.css">
 </head>
 
@@ -142,39 +144,39 @@
         <section class="section-acheivement">
             <div class="section-acheivement-platform">
                 <div class="section-acheivement-description">
-                    <h1 class="section-acheivement-title">The world's biggest healthcare platform</h1>
-                    <p class="section-acheivement-txt">We work from 6 offices all over the world, bringing Docplanner Group to life in almost 20 countries.</p>
+                    <h1 class="section-acheivement-title">The world's </br>biggest healthcare platform</h1>
+                    <p class="section-acheivement-txt">We work from 6 offices all over the world, bringing Docplanner </br> Group to life in almost 20 countries.</p>
                 </div>
                 <div class="section-acheivement-img">
                     <img class="imglogo" src="https://www.docplanner.com/img/sygnet.png" />
                 </div>
             </div>
             <div class="acheivement-stat">
-                <div class="acheivement-stat-offset">
-                    <div class="acheivement-stat-countries">
+                <div class=" acheivement-stat-cards acheivement-stat-offset">
+                    <div class="acheivement-stat-card">
                         <img class="acheivement-stat-img" scr="https://www.docplanner.com/img/flag.png" srcset="https://www.docplanner.com/img/flag.png 1x, https://www.docplanner.com/img/flag@2x.png 2x"
                         />
-                        <h3 class="acheivement-stat-title">Leader in 8 countries</h3>
+                        <h2 class="acheivement-stat-title">Leader in 8 countries</h2>
                         <p class="acheivement-stat-txt">Poland, Turkey, Spain, Italy, Mexico, Brazil, Argentina and Chile</p>
                     </div>
-                    <div class="acheivement-stat-patients">
+                    <div class="acheivement-stat-card">
                         <img class="acheivement-stat-img" scr="https://www.docplanner.com/img/patients.png" srcset="https://www.docplanner.com/img/patients.png 1x, https://www.docplanner.com/img/patients@2x.png 2x"
                         />
-                        <h3 class="acheivement-stat-title">20 million unique patients</h3>
+                        <h2 class="acheivement-stat-title">20 million unique patients</h2>
                         <p class="acheivement-stat-txt"> visit us every month</p>
                     </div>
                 </div>
-                <div class="acheivement-stat-outset">
-                    <div class="acheivement-stat-appointments">
+                <div class="acheivement-stat-cards acheivement-stat-outset">
+                    <div class="acheivement-stat-card">
                         <img class="acheivement-stat-img" scr="https://www.docplanner.com/img/visits.png" srcset="https://www.docplanner.com/img/visits.png 1x, https://www.docplanner.com/img/visits@2x.png 2x"
                         />
-                        <h3 class="acheivement-stat-title">600 000 appointments</h3>
+                        <h2 class="acheivement-stat-title">600 000 appointments</h2>
                         <p class="acheivement-stat-txt">booked last month</p>
                     </div>
-                    <div class="acheivement-stat-doctors">
+                    <div class="acheivement-stat-card">
                         <img class="acheivement-stat-img" scr="https://www.docplanner.com/img/doctors.png" srcset="https://www.docplanner.com/img/doctors.png 1x, https://www.docplanner.com/img/doctors@2x.png 2x"
                         />
-                        <h3 class="acheivement-stat-title">35 000 active doctors</h3>
+                        <h2 class="acheivement-stat-title">35 000 active doctors</h2>
                         <p class="acheivement-stat-txt">trust in our solutions</p>
                     </div>
                 </div>
@@ -191,61 +193,62 @@
                     <img class="destination-img" src="https://www.docplanner.com/images/warsaw.png" />
                     <div class="destination-designation">
                         <h4 class="destination-name">Warsaw</h4>
-                        <button class="destination-btn">see openings</button>
+                        <a href="https://www.docplanner.com/career?&loc=poland#jobs-offers" class="destination-btn">see openings</a>
                     </div>
                 </div>
                 <div class="destination-card">
                     <img class="destination-img" src="https://www.docplanner.com/images/barcelona.png" />
                     <div class="destination-designation">
                         <h4 class="destination-name">Barcelona</h4>
-                        <button class="destination-btn">see openings </button>
+                        <a href="https://www.docplanner.com/career?&loc=poland#jobs-offers" class="destination-btn">see openings </a>
                     </div>
                 </div>
                 <div class="destination-card">
                     <img class="destination-img" src="https://www.docplanner.com/images/istanbul.png" />
                     <div class="destination-designation">
                         <h4 class="destination-name">Istanbul</h4>
-                        <button class="destination-btn">see openings </button>
+                        <a href="https://www.docplanner.com/career?&loc=poland#jobs-offers" class="destination-btn">see openings </a>
                     </div>
                 </div>
                 <div class="destination-card">
                     <img class="destination-img" src="https://www.docplanner.com/images/rome.png" />
                     <div class="destination-designation">
                         <h4 class="destination-name">Rome</h4>
-                        <button class="destination-btn">see openings </button>
+                        <a href="https://www.docplanner.com/career?&loc=poland#jobs-offers" class="destination-btn">see openings </a>
                     </div>
                 </div>
                 <div class="destination-card">
                     <img class="destination-img" src="https://www.docplanner.com/images/mexico-city.png" />
                     <div class="destination-designation">
                         <h4 class="destination-name">Mexico</h4>
-                        <button class="destination-btn">see openings </button>
+                        <a href="https://www.docplanner.com/career?&loc=poland#jobs-offers" class="destination-btn">see openings </a>
                     </div>
                 </div>
                 <div class="destination-card">
                     <img class="destination-img" src="https://www.docplanner.com/images/curitiba.png" />
                     <div class="destination-designation">
                         <h4 class="destination-name">Curitiba</h4>
-                        <button class="destination-btn">see openings </button>
+                        <a href="https://www.docplanner.com/career?&loc=poland#jobs-offers" class="destination-btn">see openings </a>
                     </div>
                 </div>
             </div>
         </section>
-
     </main>
     <footer class="footer">
-        <p class="footer-txt">We are leaders in 8 countries:
+        <hr>
+        <p class="footer-txt"> We are leaders in 8 countries:
             <a class="footer-city" href="https://www.znanylekarz.pl/?_ga=2.205132056.901299071.1539098054-1119852906.1539098054">Poland</a>,
             <a class="footer-city" href="https://www.doktortakvimi.com/?_ga=2.115235983.901299071.1539098054-1119852906.1539098054">Turkey</a>,
             <a class="footer-city" href="https://www.doctoralia.es/">Spain</a>,
             <a class="footer-city" href="https://www.miodottore.it/?_ga=2.108665354.901299071.1539098054-1119852906.1539098054">Italy</a>,
             <a class="footer-city" href="https://www.doctoralia.com.mx/">Mexico</a>,
             <a class="footer-city" href="http://www.doctoralia.com.br/">Brazil</a>,
-            <a class="footer-city" href="http://www.doctoraliar.com/">Argentina</a>en
+            <a class="footer-city" href="http://www.doctoraliar.com/">Argentina</a> en
             <a class="footer-city" href="http://www.doctoralia.cl/">Chile</a>.
         </p>
-        <p class="cookies">This site uses cookies to deliver services in accordance with this Privacy Policy. You can specify the conditions
-            for storing or accessing cookies on your browser. www.docplanner.com © 2018</p>
+        <p class="footer-txt">This site uses cookies to deliver services in accordance with this Privacy Policy. You can specify the conditions
+            for storing or accessing cookies on your browser.</br>
+            www.docplanner.com © 2018</p>
     </footer>
 </body>
 
